--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
       <header>
-          <a href="#" class="logo">Insert our logo here</a>
+          <a href="#" class="logo"><img  src="logo.png" id="logo" width="34%"></a>
           <ul>
               <li><a href="#" class="active">Home</a></li>
               <li><a href="#" class="active">About</a></li>
-              <li><a href="#" class="active">Blockchain</a></li>
+              <li><a href="#" class="active">Blockchains</a></li>
               <li><a href="#" class="active">Our Engineers</a></li>
           </ul>
       </header>
@@ -23,13 +23,13 @@
           <a href= "#" id="btn">Find out more</a>
       </section>
 	<script src="index.js"></script>
-    
-    <h2>Parallax scrolling test </h2>
+ <section>
     <!–– Make the button redirect to our vison plan in the below paragraph––>
     <p>FOR tech-savvy consumers WHO are interested in the people that purchase NFTs, THE Monkey Tracker is a Web-based service THAT collects data and provides an up-to-date feed of Twitter users with an NFT profile picture. UNLIKE other services or package software products, OUR product provides a more comprehensive overview of those who are involved with NFTs.
     <br><br>
-    I saw Steve Blake at a grocery store in Los Angeles yesterday. I told him how cool it was to meet him in person, but I didn’t want to be a douche and bother him and ask him for photos or anything. He said, “Oh, like you’re doing now?” I was taken aback, and all I could say was “Huh?” but he kept cutting me off and going “huh? huh? huh?” and closing his hand shut in front of my face. I walked away and continued with my shopping, and I heard him chuckle as I walked off. When I came to pay for my stuff up front I saw him trying to walk out the doors with like fifteen Milky Ways in his hands without paying. The girl at the counter was very nice about it and professional, and was like “Sir, you need to pay for those first.” At first he kept pretending to be tired and not hear her, but eventually turned back around and brought them to the counter. When she took one of the bars and started scanning it multiple times, he stopped her and told her to scan them each individually “to prevent any electrical infetterence,” and then turned around and winked at me. I don’t even think that’s a word. After she scanned each bar and put them in a bag and started to say the price, he kept interrupting her by yawning really loudly.
+    So what are you waiting for? Click the blockchian tab and see who is buying what NFTs now!
     <br><br>
     </p>
+  </section>
   </body>
 </html>
