Fixed formating in the about us under main pic.

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 	<script src="index.js"></script>
  <section>
     <!–– Make the button redirect to our vison plan in the below paragraph––>
-    <p>FOR tech-savvy consumers WHO are interested in the people that purchase NFTs, THE Monkey Tracker is a Web-based service THAT collects data and provides an up-to-date feed of Twitter users with an NFT profile picture. UNLIKE other services or package software products, OUR product provides a more comprehensive overview of those who are involved with NFTs.
+    <h1 >FOR tech-savvy consumers WHO are interested in the people that purchase NFTs.</h1> 
     <br><br>
-    So what are you waiting for? Click the blockchian tab and see who is buying what NFTs now!
-    <br><br>
-    </p>
+    <h2>THE Monkey Tracker is a Web-based service THAT collects data and provides an up-to-date feed of Twitter users with an NFT profile picture. 
+      UNLIKE other services or package software products, OUR product provides a more comprehensive overview of those who are involved with NFTs.
+    </h2>
   </section>
   </body>
 </html>
