Added panels for "reviews"

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Monkey Tracker</title>
     <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    /> 
   </head>
   <body>
       <header>
@@ -22,7 +28,6 @@
           <h2 id="text">What is Monkey Tracker?</h2>
           <a href= "#" id="btn">Find out more</a>
       </section>
-	<script src="index.js"></script>
  <section>
     <!–– Make the button redirect to our vison plan in the below paragraph––>
     <h1 >FOR tech-savvy consumers WHO are interested in the people that purchase NFTs.</h1> 
@@ -31,5 +36,52 @@
       UNLIKE other services or package software products, OUR product provides a more comprehensive overview of those who are involved with NFTs.
     </h2>
   </section>
+  <section>
+      <div class="container">
+        <div
+        class="panel active"
+        style="
+          background-image: url('https://cdn.vox-cdn.com/thumbor/2xj1ySLIz1EZ49NvSsPzq8Itjyg=/1400x1050/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/23084330/bored_ape_nft_accidental_.jpg');
+        "
+      >
+      <h3>Alberto so cool! Follow him on insta @ebok.ton</h3>
+      </div>
+      <div
+      class="panel"
+      style="
+        background-image: url('https://lh3.googleusercontent.com/xpzm7gbZnkWN8urqvpiD_oOrNhLBC3JHr5fqRTMHSRnqmNj92OZr6rEA1B-w4UqNewrjWTjhzV0L8e7uHI2YHhWcQxHSRH6BAkLIHg=w404');
+      "
+    >
+      <h3>Celtics in 4 👿</h3>
+    </div>
+    <div
+      class="panel"
+      style="
+        background-image: url('https://cloudfront-us-east-1.images.arcpublishing.com/coindesk/EQNWMQNUMBEUZCU4RUMOWYQM3M.jpg');
+      "
+    >
+      <h3>I LOVE JOSHUA LEE 😍</h3>
+    </div>
+    <div
+    class="panel"
+    style="
+      background-image: url('https://miro.medium.com/max/1000/1*jKnY9OzEhllkSjq_W7zFbg.png');
+    "
+  >
+    <h3>Please tutor me for my MCAT plz Mic Yu ;_;</h3>
+  </div>
+  <div
+    class="panel"
+    style="
+      background-image: url('https://pbs.twimg.com/profile_images/1505032322717941761/EaFzE2yN_400x400.jpg');
+    "
+  >
+    <h3>Wow Monkey Tracker so cooool, they should get an A++ ;)</h3>
+  </div>
+
+    
+  </section>
+   
+  <script src="index.js"></script>
   </body>
 </html>
