--- a/index.html
+++ b/index.html
@@ -84,19 +84,21 @@
   </section>
   <button id="get-tweets-button">Get Tweets</button>
   
-</form>
-<table id="tweettable">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Text</th>
-            <th>Created At</th>
-        </tr>
-    </thead>
-    <tbody id="tweetbody"></tbody>
-</table>
-<hr>
+  <table id="tweettable">
+      <thead>
+          <tr>
+              <th>ID</th>
+              <th>Text</th>
+              <th>Created At</th>
+          </tr>
+      </thead>
+      <tbody id="tweetbody"></tbody>
+  </table>
+ <hr>
+
 
   <script src="index.js"></script>
+  <script src="jquery.js"></script>
+  <script src="scripts.js"></script>
   </body>
 </html>
