--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
   <table id="tweettable">
       <thead>
           <tr>
-              <th>ID</th>
+              <th>Username</th>
               <th>Text</th>
-              <th>Created At</th>
           </tr>
       </thead>
       <tbody id="tweetbody"></tbody>
