Added smooth scroll lmao

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <div
       class="panel"
       style="
-        background-image: url('https://lh3.googleusercontent.com/xpzm7gbZnkWN8urqvpiD_oOrNhLBC3JHr5fqRTMHSRnqmNj92OZr6rEA1B-w4UqNewrjWTjhzV0L8e7uHI2YHhWcQxHSRH6BAkLIHg=w404');
+        background-image: url('https://lh3.googleusercontent.com/Xmu-SAqf5hGX7GIld1l-hduJKf1Jz239ntERx2aZv-F8M9PQhltvHZUZXdMsSmOlanjHEiVO95QE2UHIz3HMGnHIObLyf_mbbtMhCQ=w600');
       "
     >
-      <h3>Celtics in 4 👿</h3>
+      <h3>I LOVE this website and the devs must be soooo smart</h3>
     </div>
     <div
       class="panel"
@@ -78,8 +78,7 @@
   >
     <h3>Wow Monkey Tracker so cooool, they should get an A++ ;)</h3>
   </div>
-
-    
+      
   </section>
    
   <script src="index.js"></script>
